# lorcana-mcp

./: .dockerignore  Dockerfile  LICENSE  README.md  cards.db  docker-compose.yml  main.py  pyproject.toml  server.json
ddl/: create_card_table.sql
lorcana_mcp/: __init__.py  client.py  config.py  repository.py  server.py
tests/: test_config.py  test_repository.py  test_server_startup.py
