[project]
name = "lorcana-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.1",
    "fastmcp>=3.0.2",
    "pysqlscribe>=0.10.1",
    "pytest>=9.0.2",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
