[project]
name = "lorcana-mcp"
version = "1.0.0"
description = "MCP server for searching, exploring, and aggregating Disney Lorcana cards."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.1",
    "fastmcp>=3.0.2",
    "pysqlscribe>=0.10.1",
    "pytest>=9.0.2",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
